syntax = "proto3";

package backup.v1beta1;

option go_package = "api/managementpb/backup;backupv1beta1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "managementpb/backup/common.proto";

// RestoreHistoryItem represents single backup restore item.
message RestoreHistoryItem {
  // Machine-readable artifact ID.
  string restore_id = 1;
  // Artifact name used for restore.
  string name = 2;
  // Database vendor e.g. PostgreSQL, MongoDB, MySQL.
  string vendor = 3;
  // Machine-readable location ID.
  string location_id = 4;
  // Location name.
  string location_name = 5;
  // Machine-readable service ID.
  string service_id = 6;
  // Service name.
  string service_name = 7;
  // Backup data model.
  DataModel data_model = 8;
  // Backup status.
  Status status = 9;
  // Artifact creation time.
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp started_at = 11;
  google.protobuf.Timestamp finished_at = 12;
}

message ListRestoresHistoryRequest {}

message ListRestoresHistoryResponse {
  repeated RestoreHistoryItem items = 1;
}

// RestoresHistory service provides public methods for managing backup restores history.
service RestoresHistory {
  // ListRestoresHistory returns a list of all backup restores history items.
  rpc ListRestoresHistory(ListRestoresHistoryRequest) returns (ListRestoresHistoryResponse) {
    option (google.api.http) = {
      post: "/v1/management/backup/RestoresHistory/List"
      body: "*"
    };
  }
}
